--- a/src/components/InputField/InputField.module.scss
+++ b/src/components/InputField/InputField.module.scss
@@ -1,1 +1,38 @@
 @import "../../utils/commons.scss";
+
+.container {
+  @extend .flexCol;
+  flex-direction: column-reverse;
+  user-select: none;
+  width: 250px;
+  align-items: flex-start;
+  label {
+    padding: 0.7rem 0px;
+    color: #676767;
+  }
+  label:focus {
+    color: #299bed;
+  }
+  input {
+    width: 100%;
+    padding: 0.7rem 0.5rem;
+    outline: none;
+    border-radius: 10px;
+    color: #676767;
+    border: 2px solid #c2c2c2;
+  }
+  input:focus {
+    border: 2px solid #299bed;
+  }
+  input:focus + label {
+    color: #299bed;
+  }
+}
+.container:hover {
+  input {
+    border: 2px solid #808080;
+  }
+  input:focus {
+    border: 2px solid #299bed;
+  }
+}
