--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -16,4 +16,22 @@
 
 body {
   font-size: 16px;
+  h1 {
+    font-size: 2rem;
+  }
+  h2 {
+    font-size: 1.5rem;
+  }
+  h3 {
+    font-size: 1.2rem;
+  }
+  h4 {
+    font-size: 1.1rem;
+  }
+  h5 {
+    font-size: 1rem;
+  }
+  p {
+    font-size: 1rem;
+  }
 }
