--- a/src/layouts/MainLayout.module.scss
+++ b/src/layouts/MainLayout.module.scss
@@ -6,9 +6,11 @@
   }
   .right {
     width: 250px;
+    margin: 1rem;
     position: absolute;
     top: 0;
     right: 0;
+    background-color: white;
   }
   position: relative;
   @extend .flexRow;
