--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -42,3 +42,13 @@ body {
     color: var(--clr-txt-light);
   }
 }
+*::-webkit-scrollbar {
+  width: 0.5rem;
+}
+*::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+*::-webkit-scrollbar-thumb {
+  background: rgb(194, 194, 194);
+  border-radius: 0.5rem;
+}
