--- a/src/components/NotificationCard/NotificationCard.module.scss
+++ b/src/components/NotificationCard/NotificationCard.module.scss
@@ -1,8 +1,9 @@
 @import "../../utils/commons.scss";
 
 .notificationCard {
-  width: 300px;
-  height: 100px;
+  min-width: 200px;
+  width: 100%;
+  min-height: 100px;
   background: #f8f8f8;
   //   background: #55bc7e;
   border-radius: 5px;
