--- a/src/components/Sidebar/Sidebar.module.scss
+++ b/src/components/Sidebar/Sidebar.module.scss
@@ -9,5 +9,7 @@
   background: white;
   border-radius: 0.5rem;
   height: calc(100% - 4rem);
+  overflow-x: hidden;
+  overflow-y: auto;
   padding: 1rem;
 }
