right-sidebar done + mainlayout changes

--- a/src/layouts/MainLayout.module.scss
+++ b/src/layouts/MainLayout.module.scss
@@ -16,6 +16,12 @@
       h3 {
         font-weight: 500;
       }
+
+      .actions {
+        button {
+          background: white;
+        }
+      }
     }
     nav,
     main {
