--- a/src/components/MenuDrawer/MenuDrawer.module.scss
+++ b/src/components/MenuDrawer/MenuDrawer.module.scss
@@ -1,1 +1,28 @@
 @import "../../utils/commons.scss";
+
+.container {
+  width: 250px;
+  padding: 1rem;
+  height: 100vh;
+  overflow: auto;
+  .iconContainer {
+    @extend .flexRow;
+  }
+  .topContainer {
+    @extend .flexRow;
+  }
+  .navLinksContainer {
+    .navLink {
+      user-select: none;
+      @extend .flexRow;
+      justify-content: flex-start;
+      align-items: center;
+      padding: 0.3rem 0rem;
+      text-decoration: none;
+      div,
+      span {
+        padding: 0.5rem 1rem;
+      }
+    }
+  }
+}
