--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -18,8 +18,8 @@
   --clr-bg-light: #00007f0c;
 }
 
-body {
-  font-size: 16px;
+html {
+  font-size: 12px;
   h1 {
     font-size: 2rem;
     color: var(--clr-txt-dark);
