--- a/src/layouts/MainLayout.module.scss
+++ b/src/layouts/MainLayout.module.scss
@@ -21,14 +21,49 @@
       }
 
       .actions {
-        width: 70%;
+        // width: 20%;
         display: flex;
         align-items: center;
         justify-content: space-between;
         margin: 0 auto;
 
-        .inputField {
-          height: 30px;
+        div {
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          flex-direction: row;
+
+          .imageContainer {
+            width: fit-content;
+            margin: 0;
+            padding: 10px;
+            border-radius: 0 10px 10px 0;
+            cursor: pointer;
+          }
+        }
+
+        img {
+          width: 20px;
+        }
+
+        div > div {
+          width: 300px;
+          border-radius: 10px 0 0 10px;
+          border: none;
+          background: gray;
+          padding: 0;
+
+          div > div > input {
+            padding: 10px;
+          }
+
+          div > div::before {
+            border-bottom: none;
+          }
+
+          div > div::after {
+            border-bottom: none;
+          }
         }
 
         button {
