correction in top nav and sidenav

--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -15,7 +15,10 @@
   --clr-txt-light: #848484;
   --clr-txt-dark: #454545;
 
-  --clr-bg-light: #00007f0c;
+  --clr-bg-light: #f3f3f9;
+
+  // sizes
+  --sidebar-width: 300px;
 }
 
 html {
