--- a/src/components/Sidebar/Sidebar.module.scss
+++ b/src/components/Sidebar/Sidebar.module.scss
@@ -1,11 +1,11 @@
 @import "../../utils/commons.scss";
 
 .container {
-  position: absolute;
+  position: fixed;
   top: 50%;
   right: 2rem;
   transform: translateY(-50%);
-  width: 300px;
+  width: var(--sidebar-width);
   background: white;
   border-radius: 0.5rem;
   height: calc(100% - 4rem);
