--- a/src/utils/commons.scss
+++ b/src/utils/commons.scss
@@ -8,3 +8,10 @@
   @extend .flexRow;
   flex-direction: column;
 }
+
+.noSelect {
+  -moz-user-select: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
