--- a/src/layouts/MainLayout.module.scss
+++ b/src/layouts/MainLayout.module.scss
@@ -10,12 +10,19 @@
     background: var(--clr-bg-light);
     border-radius: 2rem 0 0 2rem;
     height: 100vh;
-    padding: 2rem 1.5rem;
+    position: relative;
 
     nav {
       z-index: 100;
+      -ms-user-select: all;
+      -webkit-user-select: all;
       user-select: all;
       @extend .flexRow;
+      position: -webkit-sticky;
+      position: sticky;
+      top: 0;
+      left: 0;
+      width: 100%;
       h3 {
         font-weight: 500;
       }
@@ -25,7 +32,7 @@
         display: flex;
         align-items: center;
         justify-content: space-between;
-        margin: 0 auto;
+        // margin: 0 auto;
 
         div {
           display: flex;
@@ -34,6 +41,7 @@
           flex-direction: row;
 
           .imageContainer {
+            width: -moz-fit-content;
             width: fit-content;
             margin: 0;
             padding: 10px;
@@ -50,7 +58,7 @@
           width: 300px;
           border-radius: 10px 0 0 10px;
           border: none;
-          background: gray;
+          background: white;
           padding: 0;
 
           div > div > input {
@@ -68,16 +76,22 @@
 
         button {
           background: white;
+          margin-left: 2rem;
         }
       }
     }
-    nav,
-    main {
-      margin-right: 20rem;
+    nav {
+      background: var(--clr-bg-light);
+      padding: 2rem 1.5rem;
+      width: calc(100% - calc(var(--sidebar-width) + 2rem));
     }
 
     main {
+      padding: 0 1.5rem;
+      margin-right: calc(var(--sidebar-width) + 2rem);
       margin-top: 2rem;
+      @extend .flexRow;
+      align-items: flex-start;
     }
   }
 }
