--- a/src/components/MenuDrawer/MenuDrawer.module.scss
+++ b/src/components/MenuDrawer/MenuDrawer.module.scss
@@ -2,7 +2,7 @@
 
 .container {
   width: 250px;
-  padding: 1rem;
+  padding: 1.5rem 1rem;
   height: 100vh;
   overflow: auto;
   @extend .flexCol;
