--- a/src/layouts/MainLayout.module.scss
+++ b/src/layouts/MainLayout.module.scss
@@ -44,8 +44,8 @@
             width: -moz-fit-content;
             width: fit-content;
             margin: 0;
-            padding: 10px;
-            border-radius: 0 10px 10px 0;
+            padding: 12px 1rem;
+            border-radius: 0 50px 50px 0;
             cursor: pointer;
           }
         }
@@ -56,13 +56,13 @@
 
         div > div {
           width: 300px;
-          border-radius: 10px 0 0 10px;
+          border-radius: 50px 0 0 50px;
           border: none;
           background: white;
           padding: 0;
 
           div > div > input {
-            padding: 10px;
+            padding: 12px 1rem;
           }
 
           div > div::before {
@@ -84,12 +84,16 @@
       background: var(--clr-bg-light);
       padding: 2rem 1.5rem;
       width: calc(100% - calc(var(--sidebar-width) + 2rem));
+
+      .burgerMenu {
+        display: none;
+      }
     }
 
     main {
       padding: 0 1.5rem;
       margin-right: calc(var(--sidebar-width) + 2rem);
-      margin-top: 2rem;
+      // margin-top: 1rem;
       @extend .flexRow;
       align-items: flex-start;
     }
