--- a/src/layouts/MainLayout.module.scss
+++ b/src/layouts/MainLayout.module.scss
@@ -50,7 +50,7 @@
           width: 300px;
           border-radius: 10px 0 0 10px;
           border: none;
-          background: gray;
+          background: #f9f9f9;
           padding: 0;
 
           div > div > input {
