--- a/src/pages/Home/Home.module.scss
+++ b/src/pages/Home/Home.module.scss
@@ -1,33 +1,32 @@
 @import "../../utils/commons.scss";
 
 .wrapper {
-  width: 225px;
   height: 100px;
   border-radius: 5px;
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
   background: rgba(85, 188, 126, 0.2);
-  padding: 1rem 1rem 0.5rem 1rem;
+  padding: 0.5rem;
   position: relative;
 
   .title {
-    font-size: 1.2rem;
+    font-size: 1.1rem;
     color: #5c5c5c;
   }
 
   .content {
     color: rgb(85, 188, 126);
-    font-size: 4rem;
-    font-weight: bold;
+    font-size: 2.5rem;
+    font-weight: 500;
   }
 
   .icon {
     position: absolute;
-    width: 35px;
+    width: 25px;
     right: 0;
     bottom: 0;
-    margin: 0 1.5rem 2.5rem 0;
+    margin: 0 1rem 1.5rem 0;
   }
 }
 
@@ -35,9 +34,8 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 0 10px 0 10px;
-  font-size: 1.1rem;
-  width: 300px;
+  font-size: 1rem;
+  width: 500px;
   height: 30px;
   margin: 2px;
 
@@ -52,6 +50,40 @@
     .indicator {
       width: 14px;
       margin-left: 8px;
+    }
+  }
+}
+
+.instituteDetails {
+  display: flex;
+  align-items: center;
+  // justify-content: space-evenly;
+  // padding: 10px 10px 10px 0;
+
+  .batch {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-right: 50px;
+    .batchContainer {
+      display: flex;
+      align-items: center;
+      margin-bottom: 0.2rem;
+      img {
+        width: 20px;
+        color: #292d32;
+      }
+      .batchName {
+        color: #292d32;
+        font-size: 1rem;
+        margin-left: 10px;
+      }
+    }
+
+    .number {
+      font-size: 2.2rem;
+      font-weight: medium;
+      color: #55bc7e;
     }
   }
 }
