--- a/src/components/Sidebar/Sidebar.module.scss
+++ b/src/components/Sidebar/Sidebar.module.scss
@@ -11,5 +11,22 @@
   height: calc(100% - 4rem);
   overflow-x: hidden;
   overflow-y: auto;
-  padding: 1rem;
+  padding: 1rem 1.5rem;
+  padding-top: 0;
+
+  .header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 1rem 0 0 0;
+  }
+  .children {
+    margin-top: 1rem;
+  }
+  .hLine {
+    width: 100%;
+    height: 1px;
+    background: #f3f3f3;
+    margin: 1rem 0;
+  }
 }
