--- a/src/components/Card/Card.module.scss
+++ b/src/components/Card/Card.module.scss
@@ -1,12 +1,11 @@
 @import "../../utils/commons.scss";
 
 .cardWrapper {
-  height: auto;
-  width: 400px;
+  height: 100%;
+  width: 100%;
   background: #ffffff;
   border-radius: 10px;
-  padding: 0.5rem;
-  margin: 0.5rem;
+  padding: 1.5rem;
 
   .header {
     @extend .flexRow;
