Add User Functionality added

--- a/src/layouts/MainLayout.module.scss
+++ b/src/layouts/MainLayout.module.scss
@@ -114,7 +114,7 @@
       }
     }
 
-    main {
+    > main {
       padding: 0 2rem;
       margin-right: var(--margin-due-to-sidebar);
       // margin-top: 1rem;
