--- a/src/pages/Users/Users.module.scss
+++ b/src/pages/Users/Users.module.scss
@@ -1,1 +1,121 @@
 @import "../../utils/commons.scss";
+
+.container {
+  width: 100%;
+  main {
+    width: 100%;
+    padding: 2rem 0;
+    > h1 {
+      margin-bottom: 2rem;
+    }
+  }
+  .modal {
+    position: fixed;
+    display: flex;
+    z-index: 500;
+    align-items: center;
+    justify-content: center;
+    overflow: auto;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba($color: #000000, $alpha: 0.3);
+    .header {
+      padding: 1rem;
+      margin-bottom: 1rem;
+      width: 100%;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      img {
+        cursor: pointer;
+        width: 40px;
+        height: 40px;
+        border-radius: 50%;
+        &:hover {
+          background-color: rgb(231, 231, 231);
+        }
+      }
+    }
+    form {
+      display: flex;
+      justify-content: center;
+      flex-direction: column;
+      background-color: #f3f3f9;
+      height: fit-content;
+      border-radius: 10px;
+      width: fit-content;
+      max-width: 900px;
+      padding: 2rem;
+
+      .inputFields {
+        width: fit-content;
+        justify-content: space-between;
+        display: flex;
+        flex-wrap: wrap;
+        > * {
+          margin: 1rem;
+        }
+      }
+      button {
+        margin: 1rem;
+        width: fit-content;
+      }
+      .buttons {
+        width: 100%;
+        display: flex;
+        justify-content: space-between;
+      }
+    }
+  }
+  .cards {
+    width: 100%;
+  }
+  .userCardContainer {
+    cursor: pointer;
+    position: relative;
+    background-color: white;
+    border: 2px solid var(--clr-primary);
+    width: 100%;
+    padding: 1rem;
+    color: black;
+    margin: 1rem 0rem;
+    margin-right: 1rem;
+    border-radius: 10px;
+    transition: all 0.1s;
+    p {
+      color: black;
+    }
+    .moreInfo {
+      position: absolute;
+      right: 0;
+      top: -100px;
+      border-radius: 10px;
+      display: none;
+      width: 150px;
+      background-color: white;
+      padding: 1rem;
+      color: black;
+    }
+    div {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+    &:hover {
+      // transform: scale(1.03);
+      background-color: var(--clr-primary);
+
+      p {
+        color: white;
+      }
+    }
+    &:hover {
+    }
+
+    img:hover + div {
+      display: block;
+    }
+  }
+}
