--- a/src/pages/Questions/Questions.module.scss
+++ b/src/pages/Questions/Questions.module.scss
@@ -2,11 +2,15 @@
 
 .container {
   .inputFields {
-    margin: 0.5rem;
+    margin: 0.5rem 0;
+    @extend .flexRow;
+    justify-content: space-between;
     flex-wrap: wrap;
-    display: flex;
+
     > * {
-      margin: 1rem;
+      flex: 1;
+      margin: 1rem 0;
+      margin-right: 1rem;
     }
     > div:nth-child(2) {
       max-width: 500px;
