--- a/src/pages/Users/Users.module.scss
+++ b/src/pages/Users/Users.module.scss
@@ -45,11 +45,13 @@
       background-color: #f3f3f9;
       height: fit-content;
       border-radius: 10px;
+      width: -moz-fit-content;
       width: fit-content;
       max-width: 900px;
       padding: 2rem;
 
       .inputFields {
+        width: -moz-fit-content;
         width: fit-content;
         justify-content: space-between;
         display: flex;
@@ -60,6 +62,7 @@
       }
       button {
         margin: 1rem;
+        width: -moz-fit-content;
         width: fit-content;
       }
       .buttons {
