--- a/src/pages/Users/Users.module.scss
+++ b/src/pages/Users/Users.module.scss
@@ -9,6 +9,10 @@
       margin-bottom: 2rem;
     }
   }
+  .header {
+    @extend .flexRow;
+    justify-content: space-between;
+  }
   .modal {
     position: fixed;
     display: flex;
