--- a/src/components/MenuDrawer/MenuDrawer.module.scss
+++ b/src/components/MenuDrawer/MenuDrawer.module.scss
@@ -6,7 +6,7 @@
   height: 100vh;
   overflow: auto;
   @extend .flexCol;
-  justify-content: flex-start;
+  justify-content: space-between;
   transition: all 200ms;
   .imageContainer {
     @extend .noSelect;
@@ -31,6 +31,8 @@
   .navLinksContainer {
     margin: 1rem 0rem;
     width: 100%;
+    justify-self: flex-start;
+    margin-top: 0;
 
     @extend .flexCol;
     .navLink {
