--- a/src/pages/Questions/Questions.module.scss
+++ b/src/pages/Questions/Questions.module.scss
@@ -1,6 +1,7 @@
 @import "../../utils/commons.scss";
 
 .container {
+  width: 100%;
   .inputFields {
     margin: 0.5rem 0;
     @extend .flexRow;
@@ -23,5 +24,11 @@
     > div:nth-child(8) {
       width: 250px;
     }
+  }
+  .main {
+    background: white;
+    padding: 1rem;
+    border-radius: 10px;
+    margin-top: 1rem;
   }
 }
