--- a/src/pages/Questions/Questions.module.scss
+++ b/src/pages/Questions/Questions.module.scss
@@ -2,6 +2,7 @@
 
 .container {
   width: 100%;
+  padding-bottom: 2rem;
   .inputFields {
     margin: 0.5rem 0;
     @extend .flexRow;
@@ -27,7 +28,7 @@
   }
   .main {
     background: white;
-    padding: 1rem;
+    padding: 1rem 1.5rem;
     border-radius: 10px;
     margin-top: 1rem;
   }
