added paragraph type

--- a/src/pages/Questions/Objective/Objective.module.scss
+++ b/src/pages/Questions/Objective/Objective.module.scss
@@ -44,9 +44,9 @@
   }
   .editor {
     margin-top: 1.2rem;
-    height: 250px;
+    // height: 250px;
     > div {
-      height: 210px;
+      // height: 210px;
     }
     > div > div {
       &:nth-child(1) {
