matrix created, not placed yet

--- a/src/pages/Questions/Integer/Integer.module.scss
+++ b/src/pages/Questions/Integer/Integer.module.scss
@@ -1,62 +1,7 @@
 @import "../../../utils/commons.scss";
+@import "../Objective/Objective.module.scss";
 
 .container {
-  max-width: 100%;
-  .correctAnswer {
-    color: green;
-  }
-  .header {
-    @extend .flexRow;
-
-    h3 {
-      font-weight: 600;
-      text-transform: uppercase;
-    }
-    .languages {
-      @extend .flexRow;
-      // border: 2px solid var(--clr-primary);
-      overflow: hidden;
-      div {
-        padding: 0.3rem 1rem;
-        border-radius: 5px;
-        cursor: pointer;
-        color: rgba(0, 0, 0, 0.4);
-      }
-      .selected {
-        background: var(--clr-primary);
-        color: white;
-      }
-    }
-  }
-  .tabsContainer {
-    @extend .flexRow;
-
-    .optionsCounter {
-      @extend .flexRow;
-      justify-content: center;
-      .count {
-        margin: 0 1rem;
-      }
-    }
-  }
-  .tabs {
-    margin-top: 1rem;
-  }
-  .editor {
-    margin-top: 1.2rem;
-    height: 250px;
-    > div {
-      height: 210px;
-    }
-    > div > div {
-      &:nth-child(1) {
-        border-radius: 5px 5px 0 0;
-      }
-      &:nth-child(2) {
-        border-radius: 0 0 5px 5px;
-      }
-    }
-  }
   .actions {
     margin-top: 1.2rem;
     @extend .flexRow;
