--- a/src/pages/Questions/Objective/Objective.module.scss
+++ b/src/pages/Questions/Objective/Objective.module.scss
@@ -60,8 +60,8 @@
     > div > div:nth-of-type(2) > div {
       //ql-tooltip formula
       &:nth-last-child(1) {
-        left: -10px !important;
-        top: 10px !important;
+        // left: -10px !important;
+        // top: 10px !important;
       }
     }
   }
