pattern design done

--- a/src/pages/Pattern/Pattern.module.scss
+++ b/src/pages/Pattern/Pattern.module.scss
@@ -9,6 +9,10 @@
       width: 48%;
     }
   }
+  .accordionHeader {
+    @extend .flexRow;
+    width: 100%;
+  }
   .addSection {
     width: 100%;
     border: 2px dotted rgba(0, 0, 0, 0.4);
@@ -16,10 +20,10 @@
     border-radius: 0.3rem;
     margin-top: 1rem;
     padding: 2rem;
-    position: -webkit-sticky;
-    position: sticky;
-    bottom: 1rem;
-    left: 0;
+    // position: -webkit-sticky;
+    // position: sticky;
+    // bottom: 1rem;
+    // left: 0;
     cursor: pointer;
     p {
       text-align: center;
@@ -33,18 +37,49 @@
   }
 
   .sections {
+    margin-top: 1rem;
     .section {
       background: white;
       padding: 1rem;
       border-radius: 0.2rem;
       margin: 1rem 0;
+
+      // .sectionHeader {
+      //   @extend .flexRow;
+      //   > div:nth-child(2) {
+      //     align-self: flex-start;
+      //   }
+      // }
     }
 
     .subSection {
-      border: 2px solid var(--clr-primary);
+      // border: 2px solid var(--clr-primary);
+      background: #f7f7f7;
       border-radius: 0.3rem;
       margin: 1rem 0;
       padding: 1rem;
+      .subSectionHeader {
+        @extend .flexRow;
+        > div:nth-child(2) {
+          align-self: flex-start;
+        }
+      }
     }
   }
+}
+
+.customInput {
+  outline: none;
+  padding: 0.5rem 0.8rem;
+  // border: 1px solid var(--clr-primary);
+  background: rgba(0, 0, 0, 0.02);
+  border: 2px solid rgba(0, 0, 0, 0.1);
+  border-radius: 0.2rem;
+  margin: 0.5rem 0.2rem;
+}
+select {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  text-indent: 1px;
+  text-overflow: "";
 }
