--- a/src/pages/Pattern/Pattern.module.scss
+++ b/src/pages/Pattern/Pattern.module.scss
@@ -2,6 +2,7 @@
 
 .container {
   width: 100%;
+  margin-top: 0.5rem;
   .header {
     @extend .flexRow;
     > div {
@@ -44,12 +45,16 @@
       border-radius: 0.2rem;
       margin: 1rem 0;
 
-      // .sectionHeader {
-      //   @extend .flexRow;
-      //   > div:nth-child(2) {
-      //     align-self: flex-start;
-      //   }
-      // }
+      .sectionHeader {
+        @extend .flexRow;
+        flex-wrap: wrap;
+        div {
+          flex: 1;
+        }
+        // > div:nth-child(2) {
+        //   align-self: flex-start;
+        // }
+      }
     }
 
     .subSection {
@@ -58,28 +63,60 @@
       border-radius: 0.3rem;
       margin: 1rem 0;
       padding: 1rem;
+      .actionHeader {
+        @extend .flexRow;
+      }
       .subSectionHeader {
         @extend .flexRow;
-        > div:nth-child(2) {
-          align-self: flex-start;
+        flex-wrap: wrap;
+        div {
+          flex: 1;
         }
       }
     }
   }
+
+  .savePatternBtn {
+    position: fixed;
+    bottom: 2rem;
+    right: calc(var(--margin-due-to-sidebar) + 1rem);
+    background: var(--clr-success) !important;
+    color: white;
+    padding: 1.2rem;
+  }
 }
 
-.customInput {
+.customInputStyling {
   outline: none;
   padding: 0.5rem 0.8rem;
   // border: 1px solid var(--clr-primary);
   background: rgba(0, 0, 0, 0.02);
   border: 2px solid rgba(0, 0, 0, 0.1);
   border-radius: 0.2rem;
-  margin: 0.5rem 0.2rem;
+  min-width: 250px;
+  margin-top: 0.2rem;
 }
-select {
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  text-indent: 1px;
-  text-overflow: "";
+
+.customInput {
+  @extend .flexCol;
+  align-items: flex-start;
+  margin: 0.5rem 0.2rem;
+  width: 300px;
+
+  label {
+    color: rgba(0, 0, 0, 0.7);
+  }
+  // max-width: 300px;
+  input {
+    @extend .customInputStyling;
+    width: 100%;
+  }
+  select {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    text-indent: 1px;
+    text-overflow: "";
+    @extend .customInputStyling;
+    width: 100%;
+  }
 }
