--- a/src/pages/Test/CreateTest.module.scss
+++ b/src/pages/Test/CreateTest.module.scss
@@ -11,4 +11,34 @@
       flex: 1;
     }
   }
+
+  .sections {
+    margin-top: 1rem;
+    .section {
+      background: white;
+      border-radius: 0.3rem;
+      padding: 1.5rem;
+      margin: 1rem 0;
+    }
+  }
+  .subSections {
+    margin-top: 1rem;
+    .subSection {
+      background: rgba(0, 0, 0, 0.05);
+      padding: 1.5rem;
+      border-radius: 0.3rem;
+    }
+  }
+  .header {
+    @extend .flexRow;
+    p {
+      font-size: 1rem;
+      color: rgba(0, 0, 0, 0.7);
+      text-transform: capitalize;
+    }
+    span {
+      font-size: 0.9rem;
+      color: rgba(0, 0, 0, 0.5);
+    }
+  }
 }
