--- a/src/components/MenuDrawer/MenuDrawer.module.scss
+++ b/src/components/MenuDrawer/MenuDrawer.module.scss
@@ -1,92 +1,166 @@
 @import "../../utils/commons.scss";
 
-.container {
+
+.container{
   width: 250px;
-  padding: 1.5rem 1rem;
-  height: 100vh;
-  overflow: auto;
   @extend .flexCol;
-  justify-content: space-between;
-  transition: all 200ms;
-  .imageContainer {
-    @extend .noSelect;
-  }
-  .iconContainer {
+  align-self: flex-start;
+  justify-content: flex-start;
+  height: 100vh;
+  padding: 0 1rem;
+  .topContainer{
+    
+    width: fit-content;
     @extend .flexRow;
-    @extend .noSelect;
-  }
-  .topContainer {
+    padding:1rem 0;
+    padding-top: 2rem;
     width: 100%;
+  }
+  .navLinksContainer{
+    width: 100%;
+    overflow: auto;
+    max-height: 500px;
+  }
+  
+  .navLink{
+  
+    width: 100%;
+    font-size: 0.9rem;
+    margin: 10px 0;
+    border-radius: 0.5rem;
+    padding:6px 10px;
+    color: #555555;
     @extend .flexRow;
-    transition: all 200ms;
-    button {
-      img {
-        width: 20px;
-        height: 20px;
-      }
+    justify-content: flex-start;
+    align-items: center;
+    transition: color 0s;
+    >*{
+     padding:0px 10px;
     }
-    height: 7vh;
-    min-height: 40px;
-  }
-  .navLinksContainer {
-    margin: 1rem 0rem;
-    width: 100%;
-    justify-self: flex-start;
-    margin-top: 0;
-
-    @extend .flexCol;
-    .navLink {
-      width: 100%;
-      @extend .noSelect;
-      margin-bottom: 5px;
-      @extend .flexRow;
-      justify-content: flex-start;
-      align-items: center;
-      padding: 0.3rem 0rem;
-      border-radius: 10px;
-      text-decoration: none;
-      font-size: 0.9rem;
+    color:black;
+    &:hover{
       color: #555555;
-      div,
-      span {
-        padding: 0.5rem 1rem;
-      }
-    }
-
-    .navLink:hover {
       background-color: rgb(238, 238, 238);
     }
-    .activeNavLink {
-      color: white;
-      background-color: #61b4f1;
-      svg > path {
-        stroke: white;
-      }
-    }
-    .activeNavLinkForRole {
-      svg > path {
-        fill: white;
-        stroke: none;
-      }
-    }
-    .activeNavLink:hover {
-      background-color: #61b4f1;
-    }
   }
-  .instituteInfoContainer {
-    span {
-      font-size: 0.9rem;
+  .activeNavLink {
+          color: white;
+          background-color: #61b4f1;
+          svg > path {
+            stroke: white;
+          }
+        }
+        .activeNavLink:hover {
+          color:white;
+                background-color: #61b4f1;
+        }
+
+    .profileContainer{
+      width:100%;
+      .profileOptionsMenuContainer {
+            margin-left: auto;
+            img {
+              width: 15px;
+              height: 15px;
+            }
+          }
     }
-  }
-  .divider {
-    width: 100%;
-    height: 1px;
-    margin: 1rem 0px;
-    background-color: #e5e5e5;
-  }
+    .instituteInfoContainer{
+      
+      width:100%;
+      padding:0rem;
+      margin:1rem;
+      margin-top: auto;
+    }
 }
+// .container {
+//   width: 250px;
+//   padding: 1.5rem 1rem;
+//   height: 100vh;
+//   overflow: auto;
+//   @extend .flexCol;
+//   justify-content: space-between;
+//   transition: all 200ms;
+//   .imageContainer {
+//     @extend .noSelect;
+//   }
+//   .iconContainer {
+//     @extend .flexRow;
+//     @extend .noSelect;
+//   }
+//   .topContainer {
+//     width: 100%;
+//     @extend .flexRow;
+//     transition: all 200ms;
+//     button {
+//       img {
+//         width: 20px;
+//         height: 20px;
+//       }
+//     }
+//     height: 7vh;
+//     min-height: 40px;
+//   }
+//   .navLinksContainer {
+//     margin: 1rem 0rem;
+//     width: 100%;
+//     justify-self: flex-start;
+//     margin-top: 0;
+
+//     @extend .flexCol;
+//     .navLink {
+//       width: 100%;
+//       @extend .noSelect;
+//       margin-bottom: 5px;
+//       @extend .flexRow;
+//       justify-content: flex-start;
+//       align-items: center;
+//       padding: 0.3rem 0rem;
+//       border-radius: 10px;
+//       text-decoration: none;
+//       font-size: 0.9rem;
+//       color: #555555;
+//       div,
+//       span {
+//         padding: 0.5rem 1rem;
+//       }
+//     }
+
+//     .navLink:hover {
+//       background-color: rgb(238, 238, 238);
+//     }
+//     .activeNavLink {
+//       color: white;
+//       background-color: #61b4f1;
+//       svg > path {
+//         stroke: white;
+//       }
+//     }
+//     .activeNavLinkForRole {
+//       svg > path {
+//         fill: white;
+//         stroke: none;
+//       }
+//     }
+//     .activeNavLink:hover {
+//       background-color: #61b4f1;
+//     }
+//   }
+//   .instituteInfoContainer {
+//     span {
+//       font-size: 0.9rem;
+//     }
+//   }
+//   .divider {
+//     width: 100%;
+//     height: 1px;
+//     margin: 1rem 0px;
+//     background-color: #e5e5e5;
+//   }
+// }
 .profileContainer {
   width: 100%;
+  margin-bottom: 2rem;
   span {
     font-size: 0.8rem;
   }
