--- a/src/pages/Test/CreateTest.module.scss
+++ b/src/pages/Test/CreateTest.module.scss
@@ -41,4 +41,10 @@
       color: rgba(0, 0, 0, 0.5);
     }
   }
+  .searchHeader {
+    @extend .flexRow;
+    > div {
+      flex: 1;
+    }
+  }
 }
