--- a/src/components/MenuDrawer/MenuDrawer.module.scss
+++ b/src/components/MenuDrawer/MenuDrawer.module.scss
@@ -19,6 +19,7 @@
   .navLinksContainer{
     width: 100%;
     overflow: auto;
+    margin-top: 20px;
     max-height: 500px;
   }
   
@@ -28,7 +29,7 @@
     font-size: 0.9rem;
     margin: 10px 0;
     border-radius: 0.5rem;
-    padding:6px 10px;
+    padding:10px;
     color: #555555;
     @extend .flexRow;
     justify-content: flex-start;
@@ -42,12 +43,17 @@
       color: #555555;
       background-color: rgb(238, 238, 238);
     }
+    .iconContainer{
+      @extend .flexRow;
+    }
   }
   .activeNavLink {
           color: white;
           background-color: #61b4f1;
+          
           svg > path {
             stroke: white;
+
           }
         }
         .activeNavLink:hover {
@@ -57,6 +63,8 @@
 
     .profileContainer{
       width:100%;
+      padding-top:20px;
+      
       .profileOptionsMenuContainer {
             margin-left: auto;
             img {
@@ -69,6 +77,7 @@
       
       width:100%;
       padding:0rem;
+      padding-top:20px;
       margin:1rem;
       margin-top: auto;
     }
