--- a/src/components/UserProfile/UserProfile.module.scss
+++ b/src/components/UserProfile/UserProfile.module.scss
@@ -1,12 +1,13 @@
 .container {
-  width: 250px;
-  height: 85vh;
-  padding: 1rem;
+  // min-width: 250px;
+  max-width: 100%;
+  height: 100%;
+  // padding: 1rem;
   display: flex;
   flex-direction: column;
   //   align-items: center;
   justify-content: start;
-  background: #f4f4f4;
+  // background: #f4f4f4;
   .headerContainer {
     display: flex;
     align-items: center;
