--- a/src/pages/Questions/Questions.module.scss
+++ b/src/pages/Questions/Questions.module.scss
@@ -14,17 +14,20 @@
       margin: 1rem 0;
       margin-right: 1rem;
     }
-    > div:nth-child(2) {
-      max-width: 500px;
+    > div {
+      min-width: 200px;
     }
-    > div:nth-child(2),
-    > div:nth-child(5),
-    > div:nth-child(6) {
-      min-width: 250px;
-    }
-    > div:nth-child(8) {
-      width: 250px;
-    }
+    // > div:nth-child(2) {
+    //   max-width: 500px;
+    // }
+    // > div:nth-child(2),
+    // > div:nth-child(5),
+    // > div:nth-child(6) {
+    //   min-width: 250px;
+    // }
+    // > div:nth-child(8) {
+    //   width: 250px;
+    // }
   }
   .main {
     background: white;
