--- a/src/pages/Test/CreateTest.module.scss
+++ b/src/pages/Test/CreateTest.module.scss
@@ -9,7 +9,11 @@
     > div {
       margin: 0.5rem;
       flex: 1;
+      min-width: 200px;
     }
+    // .dateSelector {
+    //   display: block;
+    // }
   }
 
   .sections {
@@ -57,7 +61,9 @@
   }
 }
 .insertQuestionModal {
-  width: 500px;
+  width: 90%;
+  margin: 0 auto;
+  // height: 80vh;
   padding: 1rem 0;
   .inputFieldsHeader {
     @extend .flexRow;
@@ -65,7 +71,14 @@
     > div {
       flex: 1;
       margin: 1rem 0.2rem;
+      min-width: 200px;
     }
+    > div:nth-last-child(1) {
+      min-width: 400px;
+    }
+  }
+  .questionsTable {
+    margin-top: 2rem;
   }
 }
 .modalQuestion {
