--- a/src/pages/Users/Students/Students.module.scss
+++ b/src/pages/Users/Students/Students.module.scss
@@ -2,4 +2,43 @@
 
 .container {
   margin-top: 1rem;
+
+  form {
+    position: relative;
+    overflow: hidden;
+  }
+
+  .dropzoneContainer {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: white;
+    z-index: 10;
+    .dropzone {
+      width: 100%;
+      height: 100%;
+      @extend .flexRow;
+      > div {
+        width: 95%;
+        height: 90%;
+        margin: 0 auto;
+        border: 2px dotted;
+        border-radius: 10px;
+        @extend .flexRow;
+      }
+      p {
+        text-align: center;
+        margin: auto;
+      }
+    }
+    .close {
+      position: absolute;
+      top: 2rem;
+      right: 2rem;
+      z-index: 20;
+      cursor: pointer;
+    }
+  }
 }
