added pattern data table

--- a/src/pages/Users/Students/Students.module.scss
+++ b/src/pages/Users/Students/Students.module.scss
@@ -41,4 +41,12 @@
       cursor: pointer;
     }
   }
+  .singlSelect {
+    > div {
+      min-width: 250px;
+      > div > div > div {
+        top: 0;
+      }
+    }
+  }
 }
