--- a/src/pages/Roles/EditRole/EditRole.module.scss
+++ b/src/pages/Roles/EditRole/EditRole.module.scss
@@ -1,32 +1,37 @@
 @import "../../../utils/commons.scss";
 
-.editRole{
-    background-color: white;
-    width: 100%;
-    padding:2rem 1.5rem;
+.editRole {
+  background-color: white;
+  width: 100%;
+  padding: 2rem 1.5rem;
 }
-.tabPanel{
-    padding:1rem 1rem;
+.tabPanel {
+  padding: 1rem 1rem;
 
-    height: 67vh;
-    overflow: auto;
+  height: 67vh;
+  overflow: auto;
 }
-.permission{
-    padding:0.5rem 0;
-    p,h4{
-        margin: 0;
-    }
-    display:flex;
-    align-items: center;
-    .leftContent{
-        width:fit-content;
-    }
-    >div:nth-child(2){
-        margin-left: auto;
-    }
+.permission {
+  padding: 0.5rem 0;
+  p,
+  h4 {
+    margin: 0;
+  }
+  display: flex;
+  align-items: center;
+  .leftContent {
+    width: fit-content;
+    width: -moz-fit-content;
+  }
+  > div:nth-child(2) {
+    margin-left: auto;
+  }
 }
-.separationLine{
-    width: 100%;
-    height: 1px;
-    background-color: rgb(224, 224, 224);
+.separationLine {
+  width: 100%;
+  height: 1px;
+  background-color: rgb(224, 224, 224);
+}
+.managePeople {
+  margin: 1rem 0;
 }
