--- a/src/pages/Users/Students/Students.module.scss
+++ b/src/pages/Users/Students/Students.module.scss
@@ -3,6 +3,16 @@
 .container {
   margin-top: 1rem;
 
+  h2 {
+    margin: 0;
+  }
+
+  .header {
+    button {
+      margin: 0 1rem !important;
+    }
+  }
+
   form {
     position: relative;
     overflow: hidden;
