--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -14,6 +14,11 @@
   margin: 0.5rem 0;
 }
 
+button:disabled {
+  cursor: not-allowed;
+  opacity: 0.5;
+}
+
 .clrPrimary {
   background: var(--clr-primary);
 }
