--- a/src/pages/Login/Login.module.scss
+++ b/src/pages/Login/Login.module.scss
@@ -1,7 +1,51 @@
 @import "../../utils/commons.scss";
 
 .container {
-  @extend .flexRow;
+  @extend .flexCol;
   justify-content: center;
   height: 100vh;
+  form {
+    @extend .flexCol;
+    justify-content: center;
+    margin-top: 3rem;
+    border: 2px solid rgba(0, 0, 0, 0.2);
+    background: rgba(0, 0, 0, 0.04);
+    border-radius: 5px;
+    padding: 1.5rem;
+    position: relative;
+    padding-bottom: 2rem;
+    overflow: hidden;
+
+    > div {
+      margin: 0.5rem 0;
+    }
+
+    button {
+      margin-top: 2rem;
+    }
+
+    .error {
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      width: 100%;
+      // height: 1rem;
+      padding: 0.2rem;
+      text-align: center;
+      background: var(--clr-error);
+      color: white;
+    }
+
+    .loading {
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      width: 100%;
+      height: 1rem;
+      padding: 0.2rem;
+      text-align: center;
+      // background: var(--clr-error);
+      color: white;
+    }
+  }
 }
