teacher fetch and push done

--- a/src/pages/Users/Teachers/Teachers.module.scss
+++ b/src/pages/Users/Teachers/Teachers.module.scss
@@ -1,1 +1,10 @@
 @import "../Users.module.scss";
+
+.singlSelect {
+  > div {
+    min-width: 250px;
+    > div > div > div {
+      top: 0;
+    }
+  }
+}
