--- a/src/pages/Batches/Batches.module.scss
+++ b/src/pages/Batches/Batches.module.scss
@@ -7,6 +7,8 @@
   }
 
   .header {
+    @extend .flexRow;
+    justify-content: flex-end;
   }
 
   form {
@@ -124,5 +126,8 @@
         top: 0;
       }
     }
+  }
+  .data {
+    margin-top: 1rem;
   }
 }
