--- a/src/pages/Questions/Questions.module.scss
+++ b/src/pages/Questions/Questions.module.scss
@@ -16,16 +16,17 @@
       margin-right: 1rem;
     }
     > div {
-      min-width: 200px;
+      min-width: 48%;
+      max-width: 48%;
     }
-    // > div:nth-child(2) {
+    // > div:nth-child(4) {
     //   max-width: 500px;
     // }
-    // > div:nth-child(2),
-    // > div:nth-child(5),
-    // > div:nth-child(6) {
-    //   min-width: 250px;
-    // }
+    > div:nth-child(1),
+    > div:nth-child(2),
+    > div:nth-child(3) {
+      min-width: 100px;
+    }
     // > div:nth-child(8) {
     //   width: 250px;
     // }
