user section fields and autcomplete with creatable select added

--- a/src/pages/Users/Users.module.scss
+++ b/src/pages/Users/Users.module.scss
@@ -65,7 +65,7 @@
         display: flex;
         flex-wrap: wrap;
         > * {
-          margin: 1rem;
+          margin: 0.5rem 1rem;
         }
       }
       button {
