--- a/src/pages/Users/Students/Students.module.scss
+++ b/src/pages/Users/Students/Students.module.scss
@@ -16,14 +16,17 @@
   form {
     position: relative;
     overflow: hidden;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
   }
 
   .dropzoneContainer {
     position: absolute;
     top: 0;
     left: 0;
-    width: 100%;
-    height: 100%;
+    width: 100% !important;
+    height: 100% !important;
     background: white;
     z-index: 10;
     .dropzone {
