edit and delete modal added

--- a/src/pages/Users/Students/Students.module.scss
+++ b/src/pages/Users/Students/Students.module.scss
@@ -2,7 +2,11 @@
 
 .container {
   // margin-top: 1rem;
-
+    .modalButtons.actionButtons{
+      width: 100%;
+      @extend .flexRow;
+      justify-content: space-between;
+    }
   h2 {
     margin: 0;
   }
