--- a/src/components/MenuDrawer/MenuDrawer.module.scss
+++ b/src/components/MenuDrawer/MenuDrawer.module.scss
@@ -1,86 +1,82 @@
 @import "../../utils/commons.scss";
 
-
-.container{
+.container {
   width: 250px;
   @extend .flexCol;
   align-self: flex-start;
   justify-content: flex-start;
   height: 100vh;
   padding: 0 1rem;
-  .topContainer{
-    
+  .topContainer {
+    width: -moz-fit-content;
     width: fit-content;
     @extend .flexRow;
-    padding:1rem 0;
+    padding: 1rem 0;
     padding-top: 2rem;
     width: 100%;
   }
-  .navLinksContainer{
+  .navLinksContainer {
     width: 100%;
     overflow: auto;
     margin-top: 20px;
     max-height: 500px;
   }
-  
-  .navLink{
-  
+
+  .navLink {
     width: 100%;
     font-size: 0.9rem;
     margin: 10px 0;
     border-radius: 0.5rem;
-    padding:10px;
+    padding: 10px;
     color: #555555;
     @extend .flexRow;
     justify-content: flex-start;
     align-items: center;
     transition: color 0s;
-    >*{
-     padding:0px 10px;
+    > * {
+      padding: 0px 10px;
     }
-    color:black;
-    &:hover{
+    color: black;
+    &:hover {
       color: #555555;
       background-color: rgb(238, 238, 238);
     }
-    .iconContainer{
+    .iconContainer {
       @extend .flexRow;
     }
   }
   .activeNavLink {
-          color: white;
-          background-color: #61b4f1;
-          
-          svg > path {
-            stroke: white;
+    color: white;
+    background-color: #61b4f1;
 
-          }
-        }
-        .activeNavLink:hover {
-          color:white;
-                background-color: #61b4f1;
-        }
+    svg > path {
+      stroke: white;
+    }
+  }
+  .activeNavLink:hover {
+    color: white;
+    background-color: #61b4f1;
+  }
 
-    .profileContainer{
-      width:100%;
-      padding-top:20px;
-      
-      .profileOptionsMenuContainer {
-            margin-left: auto;
-            img {
-              width: 15px;
-              height: 15px;
-            }
-          }
+  .profileContainer {
+    width: 100%;
+    padding-top: 20px;
+
+    .profileOptionsMenuContainer {
+      margin-left: auto;
+      img {
+        width: 15px;
+        height: 15px;
+      }
     }
-    .instituteInfoContainer{
-      
-      width:100%;
-      padding:0rem;
-      padding-top:20px;
-      margin:1rem;
-      margin-top: auto;
-    }
+  }
+  .instituteInfoContainer {
+    width: 100%;
+    padding: 0rem;
+    padding-top: 20px;
+    margin: 1rem;
+    margin-top: auto;
+  }
 }
 // .container {
 //   width: 250px;
