--- a/src/components/InputField/InputField.module.scss
+++ b/src/components/InputField/InputField.module.scss
@@ -20,6 +20,7 @@
     outline: none;
     border-radius: 10px;
     color: #676767;
+    min-width: 300px;
     border: 2px solid #c2c2c2;
   }
   input:hover {
