--- a/src/pages/Login/Login.module.scss
+++ b/src/pages/Login/Login.module.scss
@@ -9,19 +9,21 @@
     justify-content: center;
     margin-top: 3rem;
     border: 2px solid rgba(0, 0, 0, 0.2);
-    background: rgba(0, 0, 0, 0.04);
+    // background: rgba(0, 0, 0, 0.04);
     border-radius: 5px;
     padding: 1.5rem;
     position: relative;
-    padding-bottom: 2rem;
+    padding-bottom: 0.5rem;
     overflow: hidden;
 
     > div {
       margin: 0.5rem 0;
     }
-
+    input {
+      min-width: 300px;
+    }
     button {
-      margin-top: 2rem;
+      margin-top: 0.5rem;
     }
 
     .error {
