math formula with quill working properly

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,6 @@
-.MuiAutocomplete-endAdornment{
-    top:0 !important;
+.MuiAutocomplete-endAdornment {
+  top: 0 !important;
+}
+.ql-editor {
+  white-space: normal !important;
 }
