--- a/src/pages/Questions/Objective/Objective.module.scss
+++ b/src/pages/Questions/Objective/Objective.module.scss
@@ -44,6 +44,8 @@
   }
   .editor {
     margin-top: 1.2rem;
+    white-space: normal !important;
+
     // height: 250px;
     > div {
       // height: 210px;
