--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -47,6 +47,15 @@ html {
     font-size: 1rem;
     color: var(--clr-txt-light);
   }
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6,
+  p {
+    margin: 0;
+  }
 }
 *::-webkit-scrollbar {
   width: 0.5rem;
