--- a/src/components/Sidebar/Sidebar.module.scss
+++ b/src/components/Sidebar/Sidebar.module.scss
@@ -20,6 +20,7 @@
     justify-content: space-between;
     padding: 1rem 0 0 0;
   }
+
   .children {
     margin-top: 1rem;
   }
@@ -29,8 +30,31 @@
     background: #f3f3f3;
     margin: 1rem 0;
   }
+}
 
-  @media screen and (max-width: 1300px) {
-    display: none;
+.burgerMenuBtn {
+  position: fixed !important;
+  right: 2rem !important;
+  z-index: 500 !important;
+  top: 3rem !important;
+  .burger {
+    width: 20px;
+    height: 20px;
+    padding: 2px;
+    @extend .flexCol;
+    .burgerItem {
+      height: 2px;
+      background: rgb(66, 66, 66);
+      width: 100%;
+
+      &:nth-of-type(2) {
+        width: calc(100% - 5px);
+        margin-left: auto;
+      }
+      &:nth-of-type(3) {
+        width: calc(100% - 10px);
+        margin-left: auto;
+      }
+    }
   }
 }
