--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -58,7 +58,8 @@ html {
   }
 }
 *::-webkit-scrollbar {
-  width: 0.5rem;
+  width: 5px;
+  height: 5px;
 }
 *::-webkit-scrollbar-track {
   background: #f1f1f1;
