--- a/src/pages/Test/CreateTest.module.scss
+++ b/src/pages/Test/CreateTest.module.scss
@@ -31,6 +31,9 @@
       background: rgba(0, 0, 0, 0.05);
       padding: 1.5rem;
       border-radius: 0.3rem;
+      .questionsList {
+        margin-top: 1rem;
+      }
     }
   }
   .header {
