--- a/src/components/MenuDrawer/MenuDrawer.module.scss
+++ b/src/components/MenuDrawer/MenuDrawer.module.scss
@@ -23,6 +23,7 @@
   }
 
   .navLink {
+    text-transform: uppercase;
     width: 100%;
     font-size: 0.9rem;
     margin: 10px 0;
@@ -60,6 +61,7 @@
 
   .profileContainer {
     width: 100%;
+    margin-top: auto;
     padding-top: 20px;
 
     .profileOptionsMenuContainer {
